# cppcourse-brunel

./: CMakeLists.txt  CmakeLists.txt  Doxyfile.in  README.md  data.py  exemple_semaine_1.ods  main.cpp  main_2.cpp  network.cpp  network.hpp  network_2.cpp  network_2.hpp  neuron.cpp  neuron.hpp  neuron_2.cpp  neuron_2.hpp  neuron_test.cpp  neurontest.txt
